# Android-OPC-UA-Server-using-open62541

./: README.md
app/: build.gradle
app/src/androidTest/java/com/example/androidopcuaclient/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  open62541.c  open62541.h  robot.c  simple_client.c  simple_server.c
app/src/main/java/com/example/androidopcuaclient/: MainActivity.java
app/src/main/res/drawable/: ic_baseline_run_circle_24.xml  ic_baseline_stop_circle_24.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: ids.xml  strings.xml
app/src/test/java/com/example/androidopcuaclient/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
